name:                yaml-conf
version:             0.1.0.0
synopsis:            Simple library to unify configuration files and command line arguments
description:         This library provides some functions and Template Haskell
                     magic to quickly and painlessly obtain a sane configuration
                     from different sources with different priorities.
homepage:            https://github.com/apirogov/yaml-conf
license:             BSD3
license-file:        LICENSE
author:              Anton Pirogov
maintainer:          anton@pirogov.de
copyright:           2017 Anton Pirogov
category:            Configuration
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Yaml.Conf
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , xdg-basedir
                     , aeson
                     , yaml
                     , data-default
                     , template-haskell
                     , th-abstraction
  default-language:    Haskell2010

executable yaml-conf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yaml-conf
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

test-suite yaml-conf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yaml-conf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apirogov/yaml-conf
